--- a/README
+++ b/README
@@ -1,6 +1,1 @@
-pictochat3dsV0B1.3dsx -> Version without the drawing.
-			Pressing start or A should exit the program.
-
-pictochat3dsV0B2.3dsx -> Version without the drawing, and without any keyboard function to be executed.
-
-pictochat3dsV0B3.3dsx -> version with drawing, without keyboard
+Pictochat3DS is a work in progress which should result in a fully working imitation of the original pictochat on the Nintendo DS
